Overview of changes in lightdm 1.4.1

    * Fix script hooks no longer working with latest glib    

Overview of changes in lightdm 1.4.0

    * Correctly implement and test autologin timeouts
    * Add greeter-show-remote-login hint
    * Correctly annotate enums in vapi file
    * QLightDM: Add default constructor to Qt power interface
    * QLightDM: Expose image path in UserModel
    * QLightDM: Add parameter to session model to show either local or remote
      sessions
    * Fix race conditions in tests

Overview of changes in lightdm 1.3.3

    * Add a new remote session type. These sessions create a temporary local
      account and authenticate against a remote server. The session is an
      application that accesses that remote session (e.g. VNC, RDP etc)
    * Support multiple simultaneous PAM prompts
    * Set utmp ut_host field to the X display address
    * Correctly reap unused authentication sessions

Overview of changes in lightdm 1.3.2

    * Handle clearenv() not being defined
    * Fix compilation with GCC 4.7
    * Expose remaining properties in QLightDM::Greeter
    * Fix utmp records being written before child process created

Overview of changes in lightdm 1.3.1

    * Fix wrapper path in AppArmor profile (broken since 1.1.1)
    * Add show-manual-login and allow-guest options to lightdm-set-defaults
    * Don't set PAM_XDISPLAY or PAM_XAUTHDATA if not supported
    * Add lock-memory option, enabled by default, to prevent paging memory
      to disk.
    * Write utmp records for sessions
    * Install PAM configuration
    * Run greeters inside the "lightdm-greeter" PAM service
    * Handle setresgid and setresuid not being available
    * Use xsession directory from lightdm.conf in liblightdm

Overview of changes in lightdm 1.2.0

    * Backup .xsession-errors on login
    * Handle failures in pam_setcred
    * Open log files in append mode
    * Add extra checks in liblightdm so that it doesn't send invalid messages
      to the daemon