@@ -9,11 +9,6 @@
 
 static GKeyFile *config;
 
-static void
-request_cb (const gchar *message)
-{
-}
-
 int
 main (int argc, char **argv)
 {
@@ -32,7 +27,7 @@ main (int argc, char **argv)
     g_type_init ();
 #endif
 
-    status_connect (request_cb);
+    status_connect (NULL);
 
     status_notify ("VNC-CLIENT START");
 
